Add DELETE method for questions
